2006-03-15  fabian

    * Put in locks to eliminate the bugs related to opening/closing sessions.
    * Removed NSConnection once again.
    * A (not-so-elegant) fix for occassional tab label refreshing problem.
    
2006-03-03  ujwal
	
	* Fixed VT100Screen:-setNewLine to redraw whole screen if buffer is full
	* Protecting PTYTextView:-refresh with locking datasource
	* Fixed memory leak in VT100Screen:-setString
	* Not using NSData in PTYTask:+_processReadThread. Instead passing raw char buffer.

2006-03-02  ujwal

	* Fixed VT100Screen:-numberOfLines to guarantee that it does not
	  report more lines than it actually has.

2006-03-02  fabian

    * Fixed VT100Screen::eraseInDisplay behavior.
    * Fixed CPU usage issue.
    * Changed VT100Screen::setNewLine so that we are not redrawing all
      characters in the case of a scrolling.
    
2006-03-01  fabian

    * Fixed a memory leak in VT100Screen
    * Changed the timing behavior of PTYSession and PTYTextView. Now we use
      the system clock, and the blinking is no longer associated with the
      input.
    * Changed the alloc/dealloc code so that now VT100Screen, VT100Terminal,
      and PTYTask objects are no longer retaining each other. All alloc and
      dealloc of these objects is done in PTYSession.
      
2006-03-01	ujwal

	* Fixed bug in PTYTextView:-drawRect in calculation of foreground color.

2006-02-28	ujwal

	* Rewrite of VT100Screen. Screen and scrollback contents are held in a single
	  contiguous buffer with pointers maintaining position of screen and scrollback 
	  tops. Defined a data type "screen_char_t" to hold unichar value, foreground 
	  color, and background color.

2006-02-23	ujwal

	* Tagged source tree for RC_0_8_2
	* Clearing buffer now does NOT clear last line. Last line now becomes first line.

2006-02-21	ujwal

	* Fixed bug in PTYTextView: -contentFromX...

2006-02-21	dnedrow
	* Updated doco to clarify session behavior reported as bug in #1011334.

2006-02-20	ujwal
